Atualizando código com mudanças recentes

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Enciclopédia Matemática - Todos os direitos reservados</p>
+                <p>&copy;SENAI - 2025</p>
             </div>
         </div>
     </footer>
